--- a/src/app/pages/gastos/gastos.component.html
+++ b/src/app/pages/gastos/gastos.component.html
@@ -31,8 +31,8 @@
         <button (click)="show = !show">{{show ? 'Esconder' : 'Mostrar'}}</button>
         
         <div *ngIf="show">
-          <vertical-bar-chart [single]=single> 
-          </vertical-bar-chart>  
+          <luiz-vertical-bar-chart [single]=single> 
+          </luiz-vertical-bar-chart>  
         </div>
 
 
