--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
       <mat-form-field appearance="fill">
         <mat-label>Nome</mat-label>
         <input matInput type="text" class="example-right-align" 
-        formControlName="nome" value="Vinicius">
+        formControlName="nome" value="luiz">
       </mat-form-field>
 
       <p>Insira o valor: </p>
@@ -90,3 +90,14 @@
 </div>
 
 
+<!-- value="{{valor.toFixed(2)}}" -->
+
+<!-- <p>Olá ! {{user}}</p> -->
+
+<!-- nome: "Luiz",
+ID: 1,
+valorTransacao: -1000,
+diaTransacao: 10,
+mesTransacao: 10,
+anoTransacao: 2020,
+classificacaoTransacao: "educacao", -->
